update lab5