@@ -259,7 +259,7 @@ public class LogFile {
             int numIdArgs = raf.readInt();
             Object idArgs[] = new Object[numIdArgs];
             for (int i = 0; i < numIdArgs; i++) {
-                idArgs[i] = new Integer(raf.readInt());
+                idArgs[i] = Integer.valueOf(raf.readInt());
             }
             pid = (PageId) idConsts[0].newInstance(idArgs);
 
